--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,13 @@ jobs:
        
       - name: Run Docker container
         run: docker run manilmunjal/helloworld:latest
+      - name: Deploy to ECS
+        run: |
+          aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
+
+      - name: Update Route 53
+        run: |
+          aws route53 change-resource-record-sets \
+            --hosted-zone-id your-hosted-zone-id \
+            --change-batch file://path/to/change_batch.json
 
