--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,16 @@ jobs:
        
       - name: Run Docker container
         run: docker run manilmunjal/helloworld:latest
+
+
+
+      - name: Tag Docker image
+        run: docker tag your-image-name:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/your-image-name:latest
+
+      - name: Push Docker image to ECR
+        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/your-image-name:latest
+     
+      
       - name: Deploy to ECS
         run: |
           aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
