--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,58 @@
+# name: try this 
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build-and-deploy:
+#     # fail-fast: false
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
+
+#       - name: Log into Docker Hub
+#         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+#       # - name: Build Node.js App
+#       #   run: |
+#       #     npm install
+#       #     npm run build
+
+#       - name: Build Docker Image
+#         run: docker build -t manilmunjal/helloworld:latest .
+
+
+#       - name: Push Docker Image to Docker Hub
+#         run: docker push manilmunjal/helloworld:latest
+       
+#       - name: Run Docker container
+#         run: docker run manilmunjal/helloworld:latest
+
+
+
+#       - name: Tag Docker image
+#         run: docker tag helloworld:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
+
+#       - name: Push Docker image to ECR
+#         run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
+     
+      
+#       - name: Deploy to ECS
+#         run: |
+#           aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
+
+#       - name: Update Route 53
+#         run: |
+#           aws route53 change-resource-record-sets \
+#             --hosted-zone-id your-hosted-zone-id \
+#             --change-batch file://path/to/change_batch.json
+
+
+
+
 name: try this 
 
 on:
@@ -7,7 +62,6 @@ on:
 
 jobs:
   build-and-deploy:
-    # fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -16,30 +70,18 @@ jobs:
       - name: Log into Docker Hub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      # - name: Build Node.js App
-      #   run: |
-      #     npm install
-      #     npm run build
-
       - name: Build Docker Image
         run: docker build -t manilmunjal/helloworld:latest .
 
-
       - name: Push Docker Image to Docker Hub
         run: docker push manilmunjal/helloworld:latest
-       
-      - name: Run Docker container
-        run: docker run manilmunjal/helloworld:latest
 
-
-
-      - name: Tag Docker image
-        run: docker tag helloworld:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
+      - name: Tag Docker image for ECR
+        run: docker tag manilmunjal/helloworld:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
 
       - name: Push Docker image to ECR
         run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
      
-      
       - name: Deploy to ECS
         run: |
           aws ecs update-service --cluster your-cluster-name --service your-service-name --force-new-deployment
@@ -49,4 +91,3 @@ jobs:
           aws route53 change-resource-record-sets \
             --hosted-zone-id your-hosted-zone-id \
             --change-batch file://path/to/change_batch.json
-
