--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -80,7 +80,9 @@ jobs:
         run: docker tag manilmunjal/helloworld:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
+        run: |
+              aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 694749494213.dkr.ecr.ap-south-1.amazonaws.com
+              docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/helloworld:latest
      
       - name: Deploy to ECS
         run: |
